# Edgar

./: README.md  setup.cfg
data/: RNA-DNA_test.csv  RNA-DNA_valid.csv
edgar/: Pretrained.pth  __init__.py  api.py  exceptions.py  model.py  utils.py
training/: run.py  train.py  train_utils.py
