[metadata]
name = edgar
version = 1.0.0
author = Artem Mukanov
description = Neural network for RNA and DNA folding energy prediction
license = LGPLv3
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[options]
zip_safe=False
packages = find:
python_requires = >= 3.8
install_requires =
    numpy>=1.18
    pandas
    importlib_resources;python_version<'3.9'
    
[options.package_data]
* =
  Pretrained.pth